--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -4,6 +4,8 @@
 :root {
     --primary-color: red;
     // defaul layout
+    --black: #000;
+    --text-color:#333;
     --default-layout-header-height: 60px;
     --default-layout-with:1150px
 }
@@ -22,4 +24,13 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+}
+
+button,input,[tabindex]{
+    border: none;
+    outline: none;
+}
+a[href]{
+    color: var(--text-color);
+    text-decoration: none;
 }
