--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -1,11 +1,69 @@
 .wrapper {
+    --search-border-radius: 92px;
+    --search-width: 52px;
+    --search-height: 46px;
+    --search-spacer:18px;
+
     width: 100%;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
-    .inner{
+    .inner {
         height: 100%;
         width: var(--default-layout-with);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .searchbox {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 361px;
+            height: var(--search-height);
+            padding-left: 16px;
+            border: 1px solid white;
+            background: rgba(22, 24, 35, 0.06);
+            border-radius: var(--search-border-radius);
+            border: 1.5px solid transparent;
+            &:focus-within {
+                border: 1.5px solid rgba(22, 24, 35, 0.2);
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                right: var(--search-width);
+                width: 1px;
+                height: calc(var(--search-height) - var(--search-spacer));
+                background: rgba(20, 22, 31, 0.12);
+            }
+            input {
+                flex: 1;
+                color: var(--black);
+                font-size: 1.6rem;
+                height: 100%;
+                background-color: transparent;
+            }
+            .clear,
+            .spinner {
+                position: absolute;
+                color: rgba(22, 24, 35, 0.34);
+                right: calc(var(--search-width) + 10px);
+            }
+
+            .search-btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: var(--search-width);
+                height: 100%;
+                border-top-right-radius: var(--search-border-radius);
+                border-bottom-right-radius: var(--search-border-radius);
+                &:hover {
+                    background: rgba(22, 24, 35, 0.03);
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
