upload style button

--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap');
 
 :root {
-    --primary-color: red;
+    --primary-color: #fe2c55;
     // defaul layout
     --black: #000;
+    --white:#fff;
     --text-color:#333;
     --default-layout-header-height: 60px;
     --default-layout-with:1150px
