--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -5,10 +5,11 @@
     --primary-color: #fe2c55;
     // defaul layout
     --black: #000;
-    --white:#fff;
-    --text-color:#333;
+    --white: #fff;
+    --text-color: #333;
     --default-layout-header-height: 60px;
-    --default-layout-with:1150px
+    --default-layout-with: 1150px;
+    --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -27,11 +28,13 @@ body {
     text-rendering: optimizeSpeed;
 }
 
-button,input,[tabindex]{
+button,
+input,
+[tabindex] {
     border: none;
     outline: none;
 }
-a[href]{
+a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
