--- a/src/components/Proper/menu/menupoper.module.scss
+++ b/src/components/Proper/menu/menupoper.module.scss
@@ -5,6 +5,7 @@
         width: 100%;
         margin-left: 0;
         justify-content: flex-start;
+        line-height: 1.8rem;
         &:hover {
             border-radius: 0;
             background-color: rgba(22, 24, 35, 0.041);
@@ -13,4 +14,22 @@
 }
 .menu-poper {
     padding-bottom: 8px;
+}
+.header-menu {
+    width: 100%;
+    position: relative;
+    height: 50px;
+    margin-top: -8px;
+}
+.back-btn {
+    width: 50px;
+    height: 100%;
+    background: transparent;
+    cursor: pointer;
+}
+.header-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
