--- a/src/components/Proper/menu/menupoper.module.scss
+++ b/src/components/Proper/menu/menupoper.module.scss
@@ -5,7 +5,12 @@
         width: 100%;
         margin-left: 0;
         justify-content: flex-start;
+        font-weight: 600;
+        font-family: 'IBM Plex Sans', sans-serif;
         line-height: 1.8rem;
+        &.separate {
+            border-top: 1px solid rgba(22, 24, 35, 0.12);
+        }
         &:hover {
             border-radius: 0;
             background-color: rgba(22, 24, 35, 0.041);
