--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -2,6 +2,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    font-family: 'Proximanova', sans-serif;
     min-width: 100px;
     font-size: 1.6rem;
     font-weight: 600;
