--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -1,5 +1,5 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400;500;600;700&display=swap');
 
 :root {
     --primary-color: #fe2c55;
@@ -11,6 +11,30 @@
     --default-layout-with: 1150px;
     --default-layout-horizontal-spacer: 24px;
 }
+// Fonts embeded
+@font-face {
+    font-family: Proximanova;
+    src: url('../../../src/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: Proximanova;
+    src: url('../../../src/assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family: Proximanova;
+    src: url('../../../src/assets/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+@font-face {
+    font-family: Proximanova;
+    src: url('../../../src/assets/fonts/sofiapro-bold.woff2');
+    font-weight: 700;
+}
+
+
+
 
 * {
     margin: 0;
@@ -19,11 +43,10 @@
 }
 html {
     font-size: 62.5%;
-    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 body {
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Proximanova', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
