--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -84,6 +84,8 @@
         display: flex;
         align-items: center;
         .action-btn{
+            display: flex;
+            align-items: center;
             color: #161823;
             font-size: 2.2rem;
             background-color: transparent;
