--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -16,7 +16,9 @@
         padding: 0 var(--default-layout-horizontal-spacer);
         align-items: center;
         justify-content: space-between;
-        
+        .link-logo{
+            display: flex;
+        }
     }
     .action {
         display: flex;
