--- a/src/components/Proper/menu/menupoper.module.scss
+++ b/src/components/Proper/menu/menupoper.module.scss
@@ -18,15 +18,22 @@
 .menu-poper {
     padding-bottom: 8px;
 }
+.menu-body{
+    overflow-y: auto;
+}
 .header-menu {
     width: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
     height: 50px;
     margin-top: -8px;
 }
 .back-btn {
     width: 50px;
     height: 100%;
+    padding-top: 5px;
     background: transparent;
     cursor: pointer;
 }
