--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,14 +4,19 @@
     --search-height: 46px;
     --search-spacer: 18px;
 
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99;
     width: 100%;
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
+    background-color: var(--white);
     justify-content: center;
     .inner {
         height: 100%;
-        width: var(--default-layout-with);
+        width: var(--default-layout-width);
         display: flex;
         padding: 0 var(--default-layout-horizontal-spacer);
         align-items: center;
