--- a/src/layouts/home.module.scss
+++ b/src/layouts/home.module.scss
@@ -1,14 +1,14 @@
-.wrapper{
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    .container{
-        width: 1150px;
-        min-height: 1000px;
+    .container {
+        margin-top: var(--default-layout-header-height);
+        width: var(--default-layout-width);
+        padding: 0 var(--default-layout-horizontal-spacer);
         display: flex;
-        .content{
+        .content {
             flex: 1;
-            min-height: 1000px;
         }
     }
 }
