--- a/src/components/search/search.module.scss
+++ b/src/components/search/search.module.scss
@@ -28,6 +28,7 @@
         color: var(--black);
         font-size: 1.6rem;
         height: 100%;
+        padding-right: 35px;
         caret-color: var(--primary-color);
         background-color: transparent;
         font-family: var(--font-family);
