--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -57,21 +57,9 @@ html *::-webkit-scrollbar {
     border-radius: 0;
     width: 8px;
 }
-html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 8px;
-}
 html *::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: rgba(22, 24, 35, .06);
-}
-html *::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(22, 24, 35, .06);
-}
-html *::-webkit-scrollbar-track {
-    border-radius: 0;
-    background-color: rgba(0, 0, 0, 0);
 }
 html *::-webkit-scrollbar-track {
     border-radius: 0;
@@ -84,7 +72,7 @@ input,
     border: none;
     outline: none;
 }
-a[href] {
+a{
     color: var(--text-color);
     text-decoration: none;
 }
