--- a/src/layouts/home.module.scss
+++ b/src/layouts/home.module.scss
@@ -5,6 +5,7 @@
     .container {
         margin-top: var(--default-layout-header-height);
         width: var(--default-layout-width);
+        max-width: 100%;
         padding: 0 var(--default-layout-horizontal-spacer);
         display: flex;
         .content {
